samples/_failures_safe/1761161257_1266f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2edd7774.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_2edd7774.c:177:13: error: expected expression at end of input
  177 |             Edge edge =
      |             ^~~~
./samples/SAFE/__tmp_2edd7774.c:177:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2edd7774.c:177:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2edd7774.c:177:13: error: expected declaration or statement at end of input
